--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  typewritertext: ^3.0.9
   flutter:
     sdk: flutter
   google_fonts: ^6.2.1
